Mobile - Spacing Issues

--- a/css/style.css
+++ b/css/style.css
@@ -272,11 +272,10 @@ h3 {
     }
 
 .course {
-        padding-top: 50px;
-        padding-bottom: 15px;
+        padding-top: 75px;
+        padding-bottom: 30px;
     }
     .course p{
-        margin-bottom: 30px;
         font-size: 14px;
     }
 } 
@@ -441,13 +440,11 @@ h3 {
     }
 
 @media(max-width:700px) {
-    .cta {
-        margin: auto;
-    }
         .cta h1 {
         font-size: 24px;
         padding: 40px 10px 10px 10px;
     }
+ 
 }
 
 
